# nimble-xchain-contracts

./: .gitignore  README.md
.github/workflows/: aptos_ci.yml  evm_ci.yml  injective_ci.yml  near_ci.yml  sol_ci.yml
algorand/: README.md  mypy.ini  requirements.txt
algorand/contracts/: errors.py  message.py  state.py  test_state.py  xchain.py
app/: Makefile  README.md  package.json  tsconfig.json
app/cli/: constants.ts  sendSolanaNative.ts  sendSolanaNativeToAvax.ts  sendSolanaNativeToPolygon.ts
app/relayer-engine-config/: common.json  executor.json
app/scripts/: run_avax_eth_testnet_deploy.sh  run_bnb_polygon_mainnet_deploy.sh  run_bnb_polygon_testnet_deploy.sh
aptos/: .gitignore  README.md
aptos/contracts/: Move.toml  package.json
aptos/scripts/: env.sh  install-aptos.sh
config/: config-base.libsonnet
config/mainnet-prod/: config.json  config.jsonnet
config/mainnet-test/: config.json  config.jsonnet
config/testnet/: config.json  config.jsonnet
constants/: constants.ts
evm/: .gitignore  Makefile  README.md  foundry.toml  package-lock.json  package.json  tsconfig.json
evm/scripts/: env.sh  install_forge_lib.sh  install_foundry.sh  make_ethers_types.sh  run_integration_test.sh  (+1 more)
injective/: .gitignore  README.md
lib/: package.json  tsconfig.json
near/: .gitignore  README.md
solana/: Anchor.toml  Makefile  README.md  package-lock.json  testing.env
solana/programs/xchain_token/: Cargo.toml
solana/programs/xchain_token/src/: context.rs  error.rs  lib.rs  message.rs
solana/programs/xchain_token/src/state/: foreign_contract.rs
(+253 files in other folders)
