[package]
name = "xchain-token"
version = "0.1.0"
description = "01 - XChain Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xchain_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.25.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.25.0" }
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", features = ["mainnet", "token-bridge"]}
